package proto;

option java_outer_classname = "CommonProto";



////////////////////////////////////////////////////
// 心跳消息
////////////////////////////////////////////////////
message Heartbeat {
	optional int64 times = 1;
}


////////////////////////////////////////////////////
// 踢人消息
////////////////////////////////////////////////////
message NotKick {
	required int64 userId = 1;//用户ID
	required int32 code 	= 2;//原因编码
	optional string reason = 3;//原因
}


////////////////////////////////////////////////////
// 货币变更通知
////////////////////////////////////////////////////
message NotCurrencyChange {
	required int64 userId 		 	= 1;//用户ID
	required int32 currencyType = 2;//货币类型 0:金币
	required int64 changeValue  = 3;//变更值
	required int64 currentValue = 4;//变更后的值
}